--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
       
       class FrequencySlider extends Slider {
         constructor(sliderContainer, lowerInput, higherInput) {
-          super(sliderContainer, lowerInput, higherInput, 100, 5000, 1);
+          super(sliderContainer, lowerInput, higherInput, 50, 1000, 1);
         }
       }
       
@@ -90,7 +90,7 @@
       const freqGreenSlider = new FrequencySlider("#freqGreen", "#minFreqGreen", "#maxFreqGreen");
       freqGreenSlider.createSlider();
 
-      const brightnessBlueSlider = new FrequencySlider("#freqBlue", "#minFreqBlue", "#maxFreqBlue");
+      const brightnessBlueSlider = new BrightnessSlider("#brightnessBlue", "#minBrightnessBlue", "#maxBrightnessBlue");
       brightnessBlueSlider.createSlider();
 
       const freqBlueSlider = new FrequencySlider("#freqBlue", "#minFreqBlue", "#maxFreqBlue");
@@ -182,6 +182,13 @@
     </div>
 
     <button type="submit">Start fireplace</button>
+  </form>
+
+  <h2>Color picker</h2>
+  <form action="{{ url_for('process_colorpicker') }}" method="post">
+    <label for="favcolor">Select your favorite color:</label>
+    <input type="color" id="favcolor" name="favcolor" value="#ff0000">
+    <button type="submit">Show color</button>
   </form>
 </body>
 </html>
